apps/express-server/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: express-server
  namespace: express-app
  labels:
    app: express-server

spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-server

  template:
    metadata:
      labels:
        app: express-server

    spec:
      containers:
      - name: express-server
        image: myacr2gitops3demo.azurecr.io/employee-service:1
        ports:
        - containerPort: 4000
