apps/express-server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: express-server
  namespace: express-app

spec:
  type: ClusterIP
  selector:
    app: express-server

  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
