apps/express-server/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-server
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: express-server.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: express-server
            port:
              number: 80
